fix pagezoom/ view height too small leading to display error

--- a/src/main.less
+++ b/src/main.less
@@ -49,7 +49,7 @@ p {
 }
 
 .App {
-    height: 100vh;
+    min-height: 100vh;
     background-color: @first-color;
 }
 
@@ -75,8 +75,6 @@ p {
     border: black solid 5px;
 }
 
-
-
 .homepage-categories {
     padding-top: 1em;
 }
@@ -87,9 +85,9 @@ p {
 
 #homepage-games-heading,
 #homepage-categories-heading {
-    margin-bottom: 1em;
+    margin-bottom: 0em;
 }
 
 .form-container {
-    max-width: 35%;
+    max-width: 40%;
 }
